[package]
name = "eca"
version = "0.1.0"
authors = ["Robert Cardona <robertcardona@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.1"
# ndarray = "0.13.0"
image = "0.22.3"
# minifb = "0.14"
petgraph = "0.4.13"
